# token-agent

./: Cargo.toml  Cross.toml  README.md  ai-plugin.json  staking-agent.json  tokens-agent.json
src/: global_state.rs  main.rs
src/endpoints/: mod.rs  stake.rs  staking.rs  token_prices.rs  total_balance.rs  unstake.rs
src/utils/: dec_format.rs  formatting.rs  mod.rs  rpc.rs
